postcss/testData/inspections/nesting/nestedRulesetWithoutNest.pcss
h1 {
    <error descr="Nested ruleset selector should start with '@nest'">span &, & h2</error> {
        color: white;
    }
}